--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
   - julia -e 'Pkg.add("PyCall")'
   - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir())/PyCall`); Pkg.resolve()'
   - julia -e 'using PyCall; @assert isdefined(:PyCall); @assert typeof(PyCall) === Module'
-  - julia -e 'println(Sys.dlpath(dlopen(\"libjulia\"))'
+  - julia -e 'println(Sys.dlpath(dlopen(\"libjulia\")))'
   - python -m unittest discover
