Fix itgnore and setup.py file.
Add a makefile cause python packaging sucks.

--- a/.gitignore
+++ b/.gitignore
@@ -35,12 +35,15 @@ nosetests.xml
 .project
 .pydevproject
 
-<<<<<<< HEAD
 .ropeproject
-=======
 # PyCharm
 .idea/*
 
 # Test files
 *test.py
->>>>>>> mad4alcohol/win-support
+
+# created by distutils during build process
+MANIFEST
+
+# Mac Os
+.DS_Store
