--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ script:
   - julia -e 'Pkg.add("PyCall")'
   - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir())/PyCall`); Pkg.resolve()'
   - julia -e 'using PyCall; @assert isdefined(:PyCall); @assert typeof(PyCall) === Module'
-  - python -m unittest discover
+  - JULIA_EXE=/usr/bin/julia python -m unittest discover
