Update JULIA_EXE in appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,5 +43,5 @@ build_script:
 
 test_script:
   - "SET PATH=%PYTHONDIR%;%PYTHONDIR%\\Scripts;%PATH%"
-  - "SET JULIA_EXE=C:\\projects\\julia\\bin"
+  - "SET JULIA_EXE=C:\\projects\\julia\\bin\\julia.exe"
   - %PYTHON% -m unittest discover
