--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,24 @@
 environment:
+  # for more python versions have a look at
+  # https://github.com/ogrisel/python-appveyor-demo/blob/master/appveyor.yml
   matrix:
-  - JULIAVERSION: "julialang/bin/winnt/x86/0.4/julia-0.4-latest-win32.exe"
-    PYTHONDIR: "C:\\Python27"
-    PYTHON: "C:\\Python27\\python.exe"
+  # - JULIAVERSION: "julialang/bin/winnt/x86/0.4/julia-0.4-latest-win32.exe"
+  #   PYTHONDIR: "C:\\Python27"
+  #   PYTHON: "C:\\Python27\\python.exe"
+  # - JULIAVERSION: "julialang/bin/winnt/x64/0.4/julia-0.4-latest-win64.exe"
+  #   PYTHONDIR: "C:\\Python27"
+  #   PYTHON: "C:\\Python27\\python.exe"
+  # - JULIAVERSION: "julianightlies/bin/winnt/x86/julia-latest-win32.exe"
+  #   PYTHONDIR: "C:\\Python27"
+  #   PYTHON: "C:\\Python27\\python.exe"
+  # - JULIAVERSION: "julianightlies/bin/winnt/x64/julia-latest-win64.exe"
+  #   PYTHONDIR: "C:\\Python27"
+  #   PYTHON: "C:\\Python27\\python.exe"
   - JULIAVERSION: "julialang/bin/winnt/x64/0.4/julia-0.4-latest-win64.exe"
-    PYTHONDIR: "C:\\Python27"
-    PYTHON: "C:\\Python27\\python.exe"
-  - JULIAVERSION: "julianightlies/bin/winnt/x86/julia-latest-win32.exe"
-    PYTHONDIR: "C:\\Python27"
-    PYTHON: "C:\\Python27\\python.exe"
-  - JULIAVERSION: "julianightlies/bin/winnt/x64/julia-latest-win64.exe"
-    PYTHONDIR: "C:\\Python27"
-    PYTHON: "C:\\Python27\\python.exe"
+    PYTHONDIR: "C:\\Python35-x64"
+    PYTHON: "C:\\Python35-x64\\python.exe"
+  - JULIAVERSION: "julialang/bin/winnt/x64/0.4/julia-0.4-latest-win64.exe"
+    PYTHONDIR: "C:\\Python27-x64"
 
 branches:
   only:
@@ -34,10 +41,13 @@ install:
 
 build_script:
   - "SET PATH=%PYTHONDIR%;%PYTHONDIR%\\Scripts;%PATH%"
-  - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.add(\"PyCall\"); Pkg.init(); Pkg.resolve()"
-  - C:\projects\julia\bin\julia -e "using PyCall; @assert isdefined(:PyCall); @assert typeof(PyCall) === Module"
+  # - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.add(\"PyCall\"); Pkg.init(); Pkg.resolve()"
+  # - C:\projects\julia\bin\julia -e "using PyCall; @assert isdefined(:PyCall); @assert typeof(PyCall) === Module"
+  - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.add(\"PyCall\");"
 
 test_script:
-  - "SET PATH=%PYTHONDIR%;%PYTHONDIR%\\Scripts;%PATH%"
-  - "SET JULIA_EXE=C:\\projects\\julia\\bin\\julia.exe"
+  - "SET PATH=%PYTHONDIR%;%PYTHONDIR%\\Scripts;C:\\projects\\julia\\bin;%PATH%"
+  - python --version
+  - dir
+  # - python -c "import julia; julia.Julia(debug=True)"
   - python -m unittest discover
