--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,8 @@ environment:
   #   PYTHON: "C:\\Python27\\python.exe"
   - JULIAVERSION: "julianightlies/bin/winnt/x64/julia-latest-win64.exe"
     PYTHONDIR: "C:\\Python27-x64"
-    PYTHON: "C:\\Python27\\python.exe"
+  - JULIAVERSION: "julialang/bin/winnt/x86/0.4/julia-0.4-latest-win64.exe"
+    PYTHONDIR: "C:\\Python27"
   - JULIAVERSION: "julialang/bin/winnt/x64/0.4/julia-0.4-latest-win64.exe"
     PYTHONDIR: "C:\\Python35-x64"
     PYTHON: "C:\\Python35-x64\\python.exe"
