--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,7 +39,7 @@ notifications:
     on_build_status_changed: false
 
 install:
-  - gcc --version
+  - C:\MinGW\bin\gcc --version
 # Download most recent Julia Windows binary
   - ps: (new-object net.webclient).DownloadFile(
         $("http://s3.amazonaws.com/"+$env:JULIAVERSION),
