--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,7 +39,8 @@ notifications:
     on_build_status_changed: false
 
 install:
-  - cd C:\MinGW\bin\gcc && dir
+  - cd C:\MinGW\bin\gcc
+  - dir
 # Download most recent Julia Windows binary
   - ps: (new-object net.webclient).DownloadFile(
         $("http://s3.amazonaws.com/"+$env:JULIAVERSION),
