--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,7 +39,7 @@ notifications:
     on_build_status_changed: false
 
 install:
-  - cd C:\MinGW\bin\gcc
+  - cd C:\MinGW\bin
   - dir
 # Download most recent Julia Windows binary
   - ps: (new-object net.webclient).DownloadFile(
