--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,12 +17,12 @@ environment:
     PYTHONDIR: "C:\\Python27-x64"
 
   # 64 julia-0.4 Python-27
-  - JULIAVERSION: "julialang/bin/winnt/x64/0.4/julia-0.4-latest-win64.exe"
-    PYTHONDIR: "C:\\Python27-x64"
+  # - JULIAVERSION: "julialang/bin/winnt/x64/0.4/julia-0.4-latest-win64.exe"
+  #  PYTHONDIR: "C:\\Python27-x64"
 
   # 32 julia-0.4 Python-27
-  - JULIAVERSION: "julialang/bin/winnt/x86/0.4/julia-0.4-latest-win32.exe"
-    PYTHONDIR: "C:\\Python27"
+  # - JULIAVERSION: "julialang/bin/winnt/x86/0.4/julia-0.4-latest-win32.exe"
+  #   PYTHONDIR: "C:\\Python27"
 
   # 64 julia-0.4 Python-35
   - JULIAVERSION: "julialang/bin/winnt/x64/0.4/julia-0.4-latest-win64.exe"
