--- a/appveyor.yml
+++ b/appveyor.yml
@@ -89,7 +89,7 @@ build_script:
 
 test_script:
   - "SET PATH=%PYTHONDIR%;%PYTHONDIR%\\Scripts;C:\\projects\\julia\\bin;%PATH%"
-  - "C:\\Program Files (x86)\\Microsoft Visual Studio 14.0\\VC\\bin\\amd64\\editbin.exe" "%PYTHONDIR%\\python.exe" /STACK:8000000
+  - "C:\\Program Files (x86)\\Microsoft Visual Studio 14.0\\VC\\bin\\amd64\\editbin.exe %PYTHONDIR%\\python.exe /STACK:8000000"
   - python --version
   - dir
   - ps: if (Test-Path Env:\CROSS_VERSION_PATH) { Invoke-Expression "$env:CROSS_VERSION_PATH -m unittest discover" }
