Fix python3+osx tests on Travis
Previously, osx on Travis runs Python 2 even when the intention was to
run the tests with Python 3.  See:
https://travis-ci.org/JuliaPy/pyjulia/jobs/373733201#L256

This is likely because:

> `python` points to Homebrew’s Python 2.7.x (if installed) otherwise
> the macOS system Python.
> -- https://docs.brew.sh/Homebrew-and-Python

This patch forces tests to run with whatever specified by `PYTHON`
environment variable.  This also let PyCall's build script to use the
Python executable specified.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,22 +25,22 @@ matrix:
         os: linux
       - language: generic
         env:
-          - PYTHON_VERSION=py2
+          - PYTHON=python2
           - JULIA_VERSION=julianightlies
         os: osx
       - language: generic
         env:
-          - PYTHON_VERSION=py2
+          - PYTHON=python2
           - JULIA_VERSION=juliareleases
         os: osx
       - language: generic
         env:
-          - PYTHON_VERSION=py3
+          - PYTHON=python3
           - JULIA_VERSION=julianightlies
         os: osx
       - language: generic
         env:
-          - PYTHON_VERSION=py3
+          - PYTHON=python3
           - JULIA_VERSION=juliareleases
         os: osx
   allow_failures:
@@ -49,10 +49,10 @@ matrix:
           - JULIA_VERSION=julianightlies
           - CROSS_VERSION=1
       - env:
-          - PYTHON_VERSION=py2
+          - PYTHON=python2
           - JULIA_VERSION=julianightlies
       - env:
-          - PYTHON_VERSION=py3
+          - PYTHON=python3
           - JULIA_VERSION=julianightlies
 notifications:
   email: false
@@ -62,14 +62,15 @@ before_script:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update -qq -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libpcre3-dev -y; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install python-numpy python3-numpy -y; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" -a "$PYTHON_VERSION" = "py3" ]; then brew list python &>/dev/null || brew upgrade python; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" -a "$PYTHON_VERSION" = "py2" ]; then brew list python@2 &>/dev/null || brew install python@2; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" -a "$PYTHON" = "python3" ]; then brew list python &>/dev/null || brew upgrade python; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" -a "$PYTHON" = "python2" ]; then brew list python@2 &>/dev/null || brew install python@2; fi
 script:
   - julia -e 'Pkg.add("PyCall")'
   - julia -e 'Pkg.checkout("PyCall"); Pkg.build("PyCall")'
   - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir())/PyCall`); Pkg.resolve()'
   - /usr/bin/python --version
-  - python --version
+  - PYTHON=${PYTHON:-python}
+  - echo $PYTHON
+  - $PYTHON --version
   - if [ "$CROSS_VERSION" = "1" ]; then /usr/bin/python -m unittest discover; fi
-  - python -m unittest discover
-
+  - $PYTHON -m unittest discover
