--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ matrix:
         os: linux
       - language: python
         python: 3.5
-        env: JULIA_VERSION=juliareleases
+        env:
+          - JULIA_VERSION=juliareleases
+          - CROSS_VERSION=1
         os: linux
       - language: python
         python: 3.5
