Use a script to rebuild PyCall.jl

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps =
     pytest
     numpy
 commands =
-    py.test {posargs}
+    {toxinidir}/ci/with_rebuilt -- py.test {posargs}
 
 passenv =
     # Allow a workaround for "error initializing LibGit2 module":
