--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,10 @@ deps =
     pytest
     numpy
 commands =
-    {toxinidir}/ci/with_rebuilt -- py.test {posargs}
+    {toxinidir}/ci/with_rebuilt -- python -m pytest {posargs}
+    # Using "python -m pytest" to exactly match the Python interpreter
+    # used to build PyCall.jl via ci/with_rebuilt (when
+    # PYJULIA_TEST_REBUILD=yes).
 
 passenv =
     # Allow a workaround for "error initializing LibGit2 module":
