Smoke test with IPython; fix a bug in JuliaImporter

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@ envlist = py27, py36
 deps =
     pytest
     numpy
+    ipython
+    mock
 commands =
     python -m julia.with_rebuilt -- python -m pytest {posargs}
     # Using "python -m pytest" to exactly match the Python interpreter
