Fix AppVeyor configuration

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ environment:
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x86/0.6/julia-0.6-latest-win32.exe"
     PYTHONDIR: "C:\\Python35"
     BATDIR: ci\appveyor\win32
+    CROSS_VERSION: 1
 
   # 32 julia latest Python-35
   - JULIA_URL: "https://julialangnightlies-s3.julialang.org/bin/winnt/x86/julia-latest-win32.exe"
@@ -21,6 +22,7 @@ environment:
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.6/julia-0.6-latest-win64.exe"
     PYTHONDIR: "C:\\Python35-x64"
     BATDIR: ci\appveyor\win64
+    CROSS_VERSION: 1
 
   # 64 julia latest Python-35
   - JULIA_URL: "https://julialangnightlies-s3.julialang.org/bin/winnt/x64/julia-latest-win64.exe"
@@ -67,5 +69,13 @@ build_script:
 test_script:
   - "SET PATH=%cd%\\%BATDIR%;%PYTHONDIR%;%PYTHONDIR%\\Scripts;C:\\projects\\julia\\bin;%PATH%"
   - dir
+
+  # Run cross-version tests but ignore the failures (from Python 2).
+  # Once cross-version in Windows is fmixed, stop using
+  # Invoke-Expression (which ignores the exit status).
   - ps: if ($env:CROSS_VERSION -eq 1) { Invoke-Expression "tox -- -s" }
+  # - ps: if ($env:CROSS_VERSION -eq 1) { tox -- -s }
+
+  # Rebuild PyCall.ji for each Python interpreter before testing:
+  - "SET PYJULIA_TEST_REBUILD=yes"
   - tox -- -s
