--- a/.travis.yml
+++ b/.travis.yml
@@ -1,54 +1,43 @@
+language: python
+os:
+  - linux
+python:
+  - "2.7"
+  - "3.6"
+env:
+  matrix:
+    - JULIA_VERSION=0.6.4 CROSS_VERSION=1
+    - JULIA_VERSION=0.7.0-rc2
+    # - JULIA_VERSION=nightly
+  global:
+    - TOXENV=py
 matrix:
   # Python environment is not functional on OS X
   include:
-      - language: python
-        python: 2.7
-        env: JULIA_VERSION=juliareleases
-        os: linux
-      - language: python
-        python: 2.7
-        env: JULIA_VERSION=julianightlies
-        os: linux
-      - language: python
-        python: 3.5
-        env:
-          - JULIA_VERSION=juliareleases
-          - CROSS_VERSION=1
-        os: linux
-      - language: python
-        python: 3.5
-        env: JULIA_VERSION=julianightlies
-        os: linux
-      - language: python
-        python: 3.5
-        env:
-          - JULIA_VERSION=julianightlies
-          - CROSS_VERSION=1
-        os: linux
       - language: generic
         env:
           - PYTHON=python2
-          - JULIA_VERSION=julianightlies
+          - JULIA_VERSION=0.7.0-rc2
+          # - JULIA_VERSION=nightly
         os: osx
       - language: generic
         env:
           - PYTHON=python2
-          - JULIA_VERSION=juliareleases
-        os: osx
-      - language: generic
-        env:
-          - PYTHON=python3
-          - JULIA_VERSION=julianightlies
-        os: osx
-      - language: generic
-        env:
-          - PYTHON=python3
-          - JULIA_VERSION=juliareleases
-        os: osx
-  allow_failures:
-      - env:
-          - JULIA_VERSION=julianightlies
+          - JULIA_VERSION=0.6.4
           - CROSS_VERSION=1
+        os: osx
+      - language: generic
+        env:
+          - PYTHON=python3
+          - JULIA_VERSION=0.7.0-rc2
+          # - JULIA_VERSION=nightly
+        os: osx
+      - language: generic
+        env:
+          - PYTHON=python3
+          - JULIA_VERSION=0.6.4
+          - CROSS_VERSION=1
+        os: osx
 branches:
   only:
     - master
@@ -57,19 +46,21 @@ notifications:
 before_script:
   - echo ./ci/install-julia.sh "$JULIA_VERSION"
   - ./ci/install-julia.sh "$JULIA_VERSION"
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update -qq -y; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libpcre3-dev -y; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install python-numpy python3-numpy -y; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" -a "$PYTHON" = "python3" ]; then brew update; brew upgrade python || echo "Ignoring errors..."; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" -a "$PYTHON" = "python2" ]; then brew update; brew list python@2 &>/dev/null || brew install python@2 || echo "Ignoring errors..."; fi
   # Ignoring errors from brew since it may actually be OK to do so.
   # Following which command will catch installation failure:
-  - which ${PYTHON:-python}
-script:
-  - julia -e 'Pkg.add("PyCall")'
-  - /usr/bin/python --version
   - PYTHON=${PYTHON:-python}
-  - echo $PYTHON
-  - $PYTHON --version
-  - if [ "$CROSS_VERSION" = "1" ]; then /usr/bin/python -m unittest discover; fi
-  - $PYTHON -m unittest discover
+  - which $PYTHON
+  - $PYTHON -m pip --version
+  - $PYTHON -m pip install --quiet tox
+  - julia -e 'Pkg.add("PyCall")'
+script:
+
+  # "py,py27" below would be redundant when the main interpreter is
+  # Python 2.7 but it simplifies the CI setup.
+  - if [ "$CROSS_VERSION" = "1" ]; then
+    $PYTHON -m tox -e py,py27 -- -s;
+    fi
+
+  - PYJULIA_TEST_REBUILD=yes $PYTHON -m tox -- -s
