--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ before_script:
   - which $PYTHON
   - $PYTHON -m pip --version
   - $PYTHON -m pip install --quiet tox
-  - julia -e 'Pkg.add("PyCall")'
+  - julia --color=yes -e 'VERSION >= v"0.7.0-DEV.5183" && using Pkg; Pkg.add("PyCall")'
 script:
 
   # "py,py27" below would be redundant when the main interpreter is
