Run doctest via pytest

--- a/tox.ini
+++ b/tox.ini
@@ -27,3 +27,9 @@ passenv =
     # See: https://coveralls-python.readthedocs.io/en/latest/usage/tox.html#travisci
     TRAVIS
     TRAVIS_*
+
+[pytest]
+addopts =
+    --doctest-modules
+    --ignore=julia/fake-julia
+    --ignore=test/_star_import.py
