--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 env:
   matrix:
     - JULIA_VERSION=0.6.4 CROSS_VERSION=1
-    - JULIA_VERSION=0.7.0-rc2
+    - JULIA_VERSION=1.0.0
     # - JULIA_VERSION=nightly
   global:
     - TOXENV=py
@@ -17,7 +17,7 @@ matrix:
       - language: generic
         env:
           - PYTHON=python2
-          - JULIA_VERSION=0.7.0-rc2
+          - JULIA_VERSION=1.0.0
           # - JULIA_VERSION=nightly
         os: osx
       - language: generic
@@ -29,7 +29,7 @@ matrix:
       - language: generic
         env:
           - PYTHON=python3
-          - JULIA_VERSION=0.7.0-rc2
+          - JULIA_VERSION=1.0.0
           # - JULIA_VERSION=nightly
         os: osx
       - language: generic
@@ -54,7 +54,7 @@ before_script:
   - which $PYTHON
   - $PYTHON -m pip --version
   - $PYTHON -m pip install --quiet tox
-  - julia -e 'Pkg.add("PyCall")'
+  - julia --color=yes -e 'VERSION >= v"0.7.0-DEV.5183" && using Pkg; Pkg.add("PyCall")'
 script:
 
   # "py,py27" below would be redundant when the main interpreter is
