--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = py27, py36
 [testenv]
 deps =
     pytest
+    pytest-cov
     numpy
     ipython
     mock
@@ -22,3 +23,7 @@ passenv =
     # See: julia/with_rebuilt.py
     PYJULIA_TEST_REBUILD
     JULIA_EXE
+
+    # See: https://coveralls-python.readthedocs.io/en/latest/usage/tox.html#travisci
+    TRAVIS
+    TRAVIS_*
