Don't install pytest 3.7.3 to avoid doctest failures in macOS

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,10 @@ envlist = py27, py36
 
 [testenv]
 deps =
-    pytest
+    pytest != 3.7.3
+    # Don't install 3.7.3 to avoid doctest failures in macOS
+    # https://github.com/pytest-dev/pytest/pull/3893#issuecomment-416560866
+
     pytest-cov
     numpy
     ipython
