--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,10 @@ deps =
     ipython
     mock
 commands =
+    python -m julia.find_libpython --list-all --verbose
+    # Print libpython candidates found by `find_libpython`.  It may be
+    # useful for debugging.
+
     python -m julia.with_rebuilt -- python -m pytest {posargs}
     # Using "python -m pytest" to exactly match the Python interpreter
     # used to build PyCall.jl via julia/with_rebuilt.py (when
