Support virtualenv/venv without separate cache (#190)
* Avoid the cryptic error about fake-julia/../lib/julia/sys.so

* More robust pre-compilation cache handling for Julia 0.6

fixes #175

* Run doctest via pytest

* Don't install pytest 3.7.3 to avoid doctest failures in macOS

* Make PyJulia usable in virtual environments

* Python < 3.7 does not support namedtuple(..., defaults=...)

* Print debug message from is_compatible_exe

* More permissive test for finding_libpython

* Run find_libpython in tox

* Use absolute_import in find_libpython.py

* Print jlinfo.libpython

* Find the linked libpython using dladdr

* Manually set SHLIB_SUFFIX in non-Linux platforms

* Use sysconfig.get_config_var("VERSION")

* Directly compare executable paths

* Print PyCall/deps/build.log

* Test against 1.0 instead of nightly in AppVeyor

* Do not use platform.system()

os.name and sys.platform are more well-defined/documented and we don't
need more detail than them.

* More manual suffix handling for macOS

--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,19 @@ envlist = py27, py36
 
 [testenv]
 deps =
-    pytest
+    pytest != 3.7.3
+    # Don't install 3.7.3 to avoid doctest failures in macOS
+    # https://github.com/pytest-dev/pytest/pull/3893#issuecomment-416560866
+
     pytest-cov
     numpy
     ipython
     mock
 commands =
+    python -m julia.find_libpython --list-all --verbose
+    # Print libpython candidates found by `find_libpython`.  It may be
+    # useful for debugging.
+
     python -m julia.with_rebuilt -- python -m pytest {posargs}
     # Using "python -m pytest" to exactly match the Python interpreter
     # used to build PyCall.jl via julia/with_rebuilt.py (when
@@ -27,3 +34,9 @@ passenv =
     # See: https://coveralls-python.readthedocs.io/en/latest/usage/tox.html#travisci
     TRAVIS
     TRAVIS_*
+
+[pytest]
+addopts =
+    --doctest-modules
+    --ignore=julia/fake-julia
+    --ignore=test/_star_import.py
