Add python-jl CLI

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,9 @@ commands =
     # used to build PyCall.jl via julia/with_rebuilt.py (when
     # PYJULIA_TEST_REBUILD=yes).
 
+    python-jl --help
+    python-jl -c 'from julia import Base; Base.banner()'
+
 passenv =
     # Allow a workaround for "error initializing LibGit2 module":
     # https://github.com/JuliaLang/julia/issues/18693
