--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   matrix:
     - JULIA_VERSION=0.6.4 CROSS_VERSION=1
     - JULIA_VERSION=1.0.0
-    # - JULIA_VERSION=nightly
+    - JULIA_VERSION=nightly
   global:
     - TOXENV=py
 matrix:
@@ -38,6 +38,8 @@ matrix:
           - JULIA_VERSION=0.6.4
           - CROSS_VERSION=1
         os: osx
+  allow_failures:
+    - env: JULIA_VERSION=nightly
 branches:
   only:
     - master
