Test invoking PyJulia with incompatible Python executable

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,9 @@ passenv =
     PYJULIA_TEST_REBUILD
     JULIA_EXE
 
+    # See: test/test_compatible_exe.py
+    PYJULIA_TEST_INCOMPATIBLE_PYTHONS
+
     # See: https://coveralls-python.readthedocs.io/en/latest/usage/tox.html#travisci
     TRAVIS
     TRAVIS_*
