--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
     - JULIA_VERSION=nightly
   global:
     - TOXENV=py
+    - PYJULIA_TEST_INCOMPATIBLE_PYTHONS=/usr/bin/python2
 matrix:
   # Python environment is not functional on OS X
   include:
@@ -29,12 +30,14 @@ matrix:
       - language: generic
         env:
           - PYTHON=python3
+          - PYJULIA_TEST_INCOMPATIBLE_PYTHONS=python2
           - JULIA_VERSION=1.0
           # - JULIA_VERSION=nightly
         os: osx
       - language: generic
         env:
           - PYTHON=python3
+          - PYJULIA_TEST_INCOMPATIBLE_PYTHONS=python2
           - JULIA_VERSION=0.6.4
           - CROSS_VERSION=1
         os: osx
@@ -58,6 +61,15 @@ before_script:
   - $PYTHON -m pip install --quiet tox coveralls
   - julia --color=yes -e 'VERSION >= v"0.7.0-DEV.5183" && using Pkg; Pkg.add("PyCall")'
 script:
+
+  # Point PYJULIA_TEST_INCOMPATIBLE_PYTHONS to incompatible Python
+  # executable (see: test/test_compatible_exe.py).
+  - if [ "$PYJULIA_TEST_INCOMPATIBLE_PYTHONS" = "$PYTHON" ]; then
+      PYJULIA_TEST_INCOMPATIBLE_PYTHONS="";
+    elif ! which "$PYJULIA_TEST_INCOMPATIBLE_PYTHONS"; then
+      PYJULIA_TEST_INCOMPATIBLE_PYTHONS="";
+    fi
+  - echo "$PYJULIA_TEST_INCOMPATIBLE_PYTHONS"
 
   # "py,py27" below would be redundant when the main interpreter is
   # Python 2.7 but it simplifies the CI setup.
