--- a/.travis.yml
+++ b/.travis.yml
@@ -74,10 +74,10 @@ script:
   # "py,py27" below would be redundant when the main interpreter is
   # Python 2.7 but it simplifies the CI setup.
   - if [ "$CROSS_VERSION" = "1" ]; then
-    $PYTHON -m tox -e py,py27 -- -s;
+    $PYTHON -m tox -e py,py27 -- -v;
     fi
 
-  - PYJULIA_TEST_REBUILD=yes $PYTHON -m tox -- --cov=julia -s
+  - PYJULIA_TEST_REBUILD=yes $PYTHON -m tox -- --cov=julia -v
 
 after_success:
   - coveralls
