Use pytest plugin to initialize Julia in test

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ passenv =
 
     # See: julia/with_rebuilt.py
     PYJULIA_TEST_REBUILD
-    JULIA_EXE
+    PYJULIA_TEST_RUNTIME
 
     # See: test/test_compatible_exe.py
     PYJULIA_TEST_INCOMPATIBLE_PYTHONS
