--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,8 @@ commands =
     # Print libpython candidates found by `find_libpython`.  It may be
     # useful for debugging.
 
-    python -m julia.with_rebuilt -- python -m pytest {posargs}
+    python -m julia.with_rebuilt -- \
+        python -m pytest --log-file {envlogdir}/pytest.log {posargs}
     # Using "python -m pytest" to exactly match the Python interpreter
     # used to build PyCall.jl via julia/with_rebuilt.py (when
     # PYJULIA_TEST_REBUILD=yes).
@@ -43,3 +44,5 @@ addopts =
     --doctest-modules
     --ignore=julia/fake-julia
     --ignore=test/_star_import.py
+
+log_file_level = DEBUG
