--- a/appveyor.yml
+++ b/appveyor.yml
@@ -91,9 +91,15 @@ test_script:
   # Run cross-version tests but ignore the failures (from Python 2).
   # Once cross-version in Windows is fmixed, stop using
   # Invoke-Expression (which ignores the exit status).
-  - ps: if ($env:CROSS_VERSION -eq 1) { Invoke-Expression "tox -- -sv" }
-  # - ps: if ($env:CROSS_VERSION -eq 1) { tox -- -sv }
+  - ps: if ($env:CROSS_VERSION -eq 1) { Invoke-Expression "tox" }
+  # - ps: if ($env:CROSS_VERSION -eq 1) { tox }
+  - ps: if ($env:CROSS_VERSION -eq 1) { Invoke-Expression "cat .tox\py\log\pytest.log" }
+  - ps: if ($env:CROSS_VERSION -eq 1) { Invoke-Expression "cat .tox\py27\log\pytest.log" }
 
   # Rebuild PyCall.ji for each Python interpreter before testing:
   - "SET PYJULIA_TEST_REBUILD=yes"
-  - tox -- -sv
+  - tox
+
+on_finish:
+  - ps: cat .tox\py\log\pytest.log
+  - ps: cat .tox\py27\log\pytest.log
