Include API docstrings

--- a/tox.ini
+++ b/tox.ini
@@ -46,3 +46,10 @@ addopts =
     --ignore=test/_star_import.py
 
 log_file_level = DEBUG
+
+[testenv:doc]
+deps =
+    -r{toxinidir}/docs/requirements.txt
+commands =
+    sphinx-build -b "html" -d build/doctrees {posargs} source "build/html"
+changedir = {toxinidir}/docs
