Move julia -> src/julia

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,9 @@ commands =
     # useful for debugging.
 
     python -m julia.with_rebuilt -- \
-        python -m pytest --log-file {envlogdir}/pytest.log {posargs}
+        python -m pytest --log-file {envlogdir}/pytest.log \
+	--pyargs julia test \
+	{posargs}
     # Using "python -m pytest" to exactly match the Python interpreter
     # used to build PyCall.jl via julia/with_rebuilt.py (when
     # PYJULIA_TEST_REBUILD=yes).
@@ -42,10 +44,17 @@ passenv =
 [pytest]
 addopts =
     --doctest-modules
-    --ignore=julia/fake-julia
     --ignore=test/_star_import.py
 
+norecursedirs = fake-julia
+
 log_file_level = DEBUG
+
+[coverage:paths]
+source =
+    src/julia
+    .tox/*/lib/python*/site-packages/julia
+# https://coverage.readthedocs.io/en/coverage-4.5.3/config.html#paths
 
 [testenv:doc]
 deps =
