--- a/tox.ini
+++ b/tox.ini
@@ -57,3 +57,9 @@ deps =
 commands =
     sphinx-build -b "html" -d build/doctrees {posargs} source "build/html"
 changedir = {toxinidir}/docs
+
+[testenv:style]
+deps =
+    black == 19.3b0
+commands =
+    black . {posargs:--check --diff}
